# matrixlib

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  MatrixLibConfig.h  MatrixLibConfig.h.in  MatrixLibExport.h  README.md  README.md~  cmake_install.cmake  doxyfile.in
doc/: doxyfile  doxyfile.in  main.dox
doc/api/html/: annotated.html  classMyMatrix-members.html  classMyMatrix.html  classMyMatrix__coll__graph.map  classMyMatrix__coll__graph.md5  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  index.html  matrixlib_8cpp.html  matrixlib_8cpp__incl.map  matrixlib_8cpp__incl.md5  matrixlib_8h.html  matrixlib_8h__dep__incl.map  matrixlib_8h__dep__incl.md5  matrixlib_8h__incl.map  matrixlib_8h__incl.md5  matrixlib_8h_source.html
doc/api/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  classes_0.js  defines_0.js  files_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  search.js  variables_0.js  variables_1.js  variables_2.js
examples/: CMakeCache.txt  CMakeLists.txt  EIT.cpp  Makefile  cmake_install.cmake  example.cpp  example.cpp~  matrix_creation  matrix_creation.cpp  multiplication  multiplication.cpp  multiplication.cpp~  transpose  transpose.cpp  transpose.cpp~
include/: .CTestTestfile.cmake.swp  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  matrixlib.h  matrixlib.hpp  matrixlib.h~
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  matrixlib.cpp  matrixlib.cpp~
tests/: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt~  test1.cpp  test1.cpp~  test2.cpp  test2.cpp~  test_Coupling.cpp~  test_GeneralDecayOperator.cpp~  test_rightApply.cpp
